# target_selection

./: .flake8  .gitignore  .nfs38073c0984a6d27c00000720  .travis.yml  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  README.md  STYLE.rst  arraycols_sdss_apogeeallstarmerge_r13.py  noxfile.py  pyproject.toml  readthedocs.yml  requirements.txt  requirements.txt~  safe.MANIFEST.in  setup.cfg  setup.py  tasks.py
.github/workflows/: check-lockfile.yml  linting.yml  pythonapp.yml  release.yml  test.yml
docs/sphinx/: api.rst  changelog.md  cli.rst  conf.py  cross-match.rst  database.rst  index.rst  intro.rst  requirements.txt  skies.rst  tagging.rst  target-selection.rst
docs/sphinx/_static/: Catalogdb_Crossmatch.graffle  sample_graph.graffle
docs/v1_documentation/catalog_to_catalog/: README.md  add_pk_defaults_to_sdss_id_tables.sql  add_ra_dec.sql  add_ra_dec_catid.sql  append_to_sdss_id.py  cat_to_cat.yml  catalog_to_catalog_description.txt  catalogidx_to_catalogidy.yml  catalogidx_to_catalogidy_foo.yml  catalogidx_to_catalogidy_ind_test.yml  create_catalogidx_to_catalogidy.py  create_sdss_id.sql  example.catalogidx_to_catalogidy.yml  index_sdss_id.sql  run_catalogidx_to_catalogidy.py  run_catalogidx_to_catalogidy_ind_test.py
docs/v1_documentation/catalog_to_catalog/config/: individual_crossmatches.yml
docs/v1_documentation/duplicates/: duplicates_info_statistics.pages  v1_duplicates_table_creation.py
docs/v1_documentation/v1_crossmatch/: changes_to_codes_from_v0p5_to_v1.pages  crossmatch_statistics_v1.0.numbers  duplicates.key  how_to_link_non_crossmatched_tables_to_catalog.txt
docs/website/bhm_cartons/: README_build_tables.sh  bhm_target_cartons.html  bhm_target_cartons.tex  carton_descriptions.json  proc_carton_desc.py
docs/website/bhm_cartons/dr19/: README_build_tables.sh  bhm_target_cartons.html  bhm_target_cartons.tex  carton_descriptions.html  carton_descriptions.json  carton_descriptions_openfiber.html  carton_table_block_generation_v0.5.2.html  carton_table_block_generation_v0.5.3.html  carton_table_block_generation_v0.5.5.html  carton_table_block_generation_v0.5.epsilon-7-core-0.html  carton_table_block_generation_v0.plates.html  carton_table_block_multi_generation_v0.5.html  carton_table_block_multi_generation_v0.5_slim.html  proc_carton_desc_dr19.py  q2_result.csv  q_result.csv
docs/website/bhm_cartons/dr20/: README_build_tables.sh  bhm_target_cartons.html  bhm_target_cartons.tex  bhm_target_cartons_dr20.tex  carton_descriptions.html  carton_descriptions.json  carton_table_block_generation_dr20.manual.html  carton_table_block_generation_v0.5.2.html  carton_table_block_generation_v0.5.3.html  carton_table_block_generation_v0.5.5.html  carton_table_block_generation_v0.5.epsilon-7-core-0.html  carton_table_block_generation_v0.plates.html  carton_table_block_generation_v1.0.2.html  carton_table_block_generation_v1.0.3.html  carton_table_block_generation_v1.0.4.html  carton_table_block_generation_v1.0.5-boss-only.html  carton_table_block_generation_v1.0.5.html  carton_table_block_multi_generation_v0.5.html  carton_table_block_multi_generation_v0.5_slim.html  carton_table_block_multi_generation_v1.0_slim.html  convert_html_to_latex.sh  proc_carton_desc_dr20.py  q2_result.csv  q3_result.csv  q3b_result.csv  q_result.csv
docs/website_dr19/bhm_cartons/: README_build_tables.sh  bhm_target_cartons.html  bhm_target_cartons.tex  bhm_target_cartons_v0.tex  carton_descriptions.html  carton_descriptions.json
python/target_selection/: __init__.py  __main__.py  append_to_sdss_id.py  bhm_aqmes.py  bhm_aqmes.py~  catalogdb_wrapper.py  catalogdb_wrapper.py~  create_catalogidx_to_catalogidy.py  exceptions.py  mag_flux.py  mwm_GG.py  print_func.py  sdss_id.py  skies.py  utils.py  xmatch.py
python/target_selection/cartons/: __init__.py  base.py  bhm_aqmes.py  bhm_csc.py  bhm_galaxies.py  bhm_gua.py  bhm_rm.py  bhm_spiders_agn.py  bhm_spiders_clusters.py  galactic_genesis.py  guide.py  mwm_bin_gaia.py  mwm_bin_vis.py  mwm_cb.py  mwm_cb_cvcandidates.py  mwm_cb_uvex.py  mwm_dust.py  mwm_dust_dist.py  mwm_erosita.py  mwm_galactic.py  mwm_halo.py  mwm_halo_gaia_dr3.py  mwm_hypervelocity.py  mwm_legacy.py  mwm_legacy_ir2opt.py  mwm_legacy_ir2opt_v2.py  mwm_magcloud_agb.py  mwm_magcloud_rgb.py  mwm_monitor_apogee.py  mwm_more_ob.py  mwm_ob.py  mwm_openfiber.py  mwm_planet.py  mwm_rv.py  mwm_snc.py  mwm_snc_further_ext.py  mwm_tess_ob.py  mwm_tess_planets.py  mwm_tess_rgb.py  mwm_wd.py  (+9 more)
python/target_selection/cartons/tests/: guide_tests.py
python/target_selection/classes/: base.py  guide.py
python/target_selection/config/: target_selection.yml  target_selection_v0.yml  xmatch.yml  xmatch_v1.yml
python/target_selection/core/: exceptions.py
python/target_selection/etc/: target_selection.yml
python/target_selection/masks/: AQMES_wboss_imaging_NGC_proc.ply  candidate_target_fields_bhm_aqmes_med_v0.3.1.fits  candidate_target_fields_bhm_aqmes_wide_v0.2.1.fits  candidate_target_fields_bhm_rm_v0.2.1.fits  rsFields-annotated-lco-deep_proc.ply  rsFields_boss_survey_sgc.fits
python/target_selection/sdss_id/: __init__.py  append_to_sdss_id.py  create_catalogidx_to_catalogidy.py
python/target_selection/utils/: logger.py
python/target_selection/v1_documentation/: catalog_to_catalog_statistics.txt
scripts/: yanny_scraper
src/target_selection/: __init__.py  __main__.py  xmatch.py
src/target_selection/cartons/: base.py  bhm_galaxies.py  bhm_gua.py  guide.py  mwm_bin_gaia.py  mwm_cb_cvcandidates.py  mwm_galactic.py  mwm_halo_gaia_dr3.py  mwm_hypervelocity.py  mwm_more_ob.py  mwm_ob.py  mwm_planet.py  mwm_snc.py  mwm_snc_further_ext.py  mwm_tess_rgb.py  mwm_yso.py  ops_bright_stars.py  ops_skies.py  skymask.py
src/target_selection/config/: target_selection.yml  xmatch_v0.yml  xmatch_v1.yml
src/target_selection/masks/: candidate_target_fields_bhm_aqmes_med_v0.2.1.fits  candidate_target_fields_bhm_aqmes_wide_v0.3.1.fits  rsFields_boss_survey.fits
tests/: conftest.py  test_main.py  test_skies.py  test_target_selection.py
tests/data/: confSummary-15130.par
(+6 files in other folders)
