[metadata]
name = sdss-target-selection
version = 0.1.2
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = Code to perform target selection for BHM/MWM using catalogdb
url = https://github.com/sdss/target_selection
project_urls =
    Repository = https://github.com/sdss/target_selection
    Documentation = https://sdss-target-selection.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
    = python
setup_requires =
    numpy>=1.18.1
install_requires =
    numpy>=1.18.1
    pydl>=1.0.0rc1
    sdssdb>=0.4.2
    click>=7.0
    astropy>=4.0.0
    networkx>=2.4
    pandas>=1.0.0
    healpy<=1.13.0
    pymangle>=0.9.1
    tables>=3.6.1
    sdsstools>=0.4.5
    enlighten>=1.4.0
scripts =
    bin/target_selection
    bin/yanny_scraper

[options.packages.find]
where =
    python

[options.package_data]
target_selection =
    config/*
    masks/*

[options.extras_require]
dev =
    %(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
    ipython>=7.9.0
    matplotlib>=3.1.1
    flake8>=3.7.9
    doc8>=0.8.0
    pytest>=5.2.2
    pytest-asyncio>=0.10.0
    pytest-cov>=2.8.1
    pytest-mock>=1.13.0
    pytest-sugar>=0.9.2
    isort>=5.0.0
    codecov>=2.0.15
    coverage[toml]>=5.0
    ipdb>=0.12.3
docs =
    Sphinx>=2.1.0
    sphinx-click>=2.3.0

[isort]
line_length = 79
sections =
    FUTURE
    STDLIB
    THIRDPARTY
    SDSS
    FIRSTPARTY
    LOCALFOLDER
default_section = THIRDPARTY
known_first_party =
    target_selection
known_sdss =
    sdssdb
    sdsstools
balanced_wrapping = true
include_trailing_comma = false
lines_after_imports = 2
use_parentheses = true

[flake8]
ignore =
    H101
    E722
    W504
    W505
per-file-ignores =
    */__init__.py:F401,E402
max-line-length = 99

[tool:pytest]
addopts = --cov target_selection --cov-report html -W ignore

[coverage:run]
branch = true
include =
    python/target_selection/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
