[metadata]
name = sdss-target-selection
version = 1.0.38-alpha.0
author = José Sánchez-Gallego
author_email = gallegoj@uw.edu
description = Code to perform target selection for BHM/MWM using catalogdb
url = https://github.com/sdss/target_selection
project_urls =
    Repository = https://github.com/sdss/target_selection
    Documentation = https://sdss-target-selection.readthedocs.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
python_requires = >=3.6
packages = find:
package_dir =
    = python
setup_requires =
    numpy>=1.20.0
install_requires =
    numpy>=1.18.1
    pydl>=1.0.0rc1
    sdssdb>=0.6.2
    click>=7.0
    astropy>=5.0.0
    networkx>=2.4
    pandas>=1.0.0
    healpy>=1.13.0
    pymangle>=0.9.1
    tables>=3.6.1
    sdsstools>=1.0.0
    enlighten>=1.4.0
    mocpy>=0.8.5
    pymoc>=0.5.0
    gala>=1.6.1
    matplotlib>=3.1.1
    dustmaps==1.0.10
scripts =
    bin/target_selection
    bin/yanny_scraper

[options.packages.find]
where =
    python

[options.package_data]
target_selection =
    config/*
    masks/*

[options.extras_require]
dev =
    %(docs)s # This forces the docs extras to install (http://bit.ly/2Qz7fzb)
    ipython>=7.9.0
    flake8>=3.7.9
    doc8>=0.8.0
    isort>=5.0.0
    ipdb>=0.12.3
    black>=20.8b1
    nox>=2021.6.12
docs =
    Sphinx>=4.0.0
    sphinx-click>=3.0.0
    furo>=2021.6.18-beta.36
    sphinx-autobuild>=2021.3.14
    sphinx-copybutton>=0.3.3
    myst-parser>=0.15

[isort]
sections =
    FUTURE
    STDLIB
    TYPING
    THIRDPARTY
    SDSS
    FIRSTPARTY
    LOCALFOLDER
default_section = THIRDPARTY
known_first_party = target_selection
known_typing =
    typing
known_sdss =
    sdsstools
    sdssdb
lines_after_imports = 2
line_length = 79
use_parentheses = true
balanced_wrapping = true
include_trailing_comma = false

[flake8]
ignore =
    H101
    E722
    W503
    W504
    W505
per-file-ignores =
    */__init__.py:F401,E402
max-line-length = 99

[tool:pytest]
addopts = --cov target_selection --cov-report html -W ignore

[coverage:run]
branch = true
include =
    python/target_selection/*
omit =
    */utils/*.py
    */__init__.py

[coverage:report]
exclude_lines =
